<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".FragmentSecondary">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:orientation="vertical"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
      android:id="@+id/main_cardview"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:cardCornerRadius="20dp"
      app:cardMaxElevation="1dp"
      app:cardPreventCornerOverlap="true"
      app:cardUseCompatPadding="true"
      app:contentPadding="10dp">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_white"
        android:padding="10dp">

        <TextView
          android:id="@+id/classmates"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/members_maincard"
          android:textColor="@color/mainGreen"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent" />

        <Button
          android:id="@+id/join_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:background="@drawable/round_ex"
          android:backgroundTint="#009688"
          android:paddingStart="30dp"
          android:paddingTop="5dp"
          android:paddingEnd="30dp"
          android:text="@string/join_class_button"
          android:textAllCaps="false"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
          android:id="@+id/garis"
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:layout_marginTop="10dp"
          android:background="@color/mainBlue"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/instructor" />

        <TextView
          android:id="@+id/instructor"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:text="@string/lecturer1"
          android:textColor="@color/secondaryFont"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/course" />

        <TextView
          android:id="@+id/time"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="3dp"
          android:fontFamily="sans-serif-medium"
          android:text="@string/time_maincard"
          android:textColor="@color/ternaryFont"
          android:textSize="13sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/Category"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/round_ex"
          android:fontFamily="sans-serif-medium"
          android:paddingStart="10dp"
          android:paddingTop="5dp"
          android:paddingEnd="10dp"
          android:paddingBottom="5dp"
          android:text="@string/course1"
          android:textAlignment="center"
          android:textColor="@color/white"
          android:textSize="13sp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/course"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:fontFamily="sans-serif-black"
          android:text="@string/activities1"
          android:textColor="@color/mainFont"
          android:textSize="20sp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/Category" />

        <ImageView
          android:id="@+id/imageView"
          android:layout_width="match_parent"
          android:layout_height="182dp"
          android:adjustViewBounds="false"
          android:scaleType="centerCrop"
          android:src="@drawable/albert"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="@+id/garis" />
      </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
      android:id="@+id/main_cardview2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:cardCornerRadius="20dp"
      app:cardMaxElevation="1dp"
      app:cardPreventCornerOverlap="true"
      app:cardUseCompatPadding="true"
      app:contentPadding="10dp">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_white"
        android:padding="10dp">

        <TextView
          android:id="@+id/classmates2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/members_maincard"
          android:textColor="@color/mainGreen"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent" />

        <Button
          android:id="@+id/join_button2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:background="@drawable/round_ex"
          android:backgroundTint="#009688"
          android:paddingStart="30dp"
          android:paddingTop="5dp"
          android:paddingEnd="30dp"
          android:text="@string/join_class_button"
          android:textAllCaps="false"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
          android:id="@+id/garis2"
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:layout_marginTop="10dp"
          android:background="@color/mainBlue"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/instructor2" />

        <TextView
          android:id="@+id/instructor2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:text="@string/lecturer1"
          android:textColor="@color/secondaryFont"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/course2" />

        <TextView
          android:id="@+id/time2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="3dp"
          android:fontFamily="sans-serif-medium"
          android:text="@string/time_maincard"
          android:textColor="@color/ternaryFont"
          android:textSize="13sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/Category2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/round_ex"
          android:fontFamily="sans-serif-medium"
          android:paddingStart="10dp"
          android:paddingTop="5dp"
          android:paddingEnd="10dp"
          android:paddingBottom="5dp"
          android:text="@string/course1"
          android:textAlignment="center"
          android:textColor="@color/white"
          android:textSize="13sp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/course2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:fontFamily="sans-serif-black"
          android:text="@string/activities1"
          android:textColor="@color/mainFont"
          android:textSize="20sp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/Category2" />

        <ImageView
          android:id="@+id/imageView2"
          android:layout_width="match_parent"
          android:layout_height="182dp"
          android:adjustViewBounds="false"
          android:scaleType="centerCrop"
          android:src="@drawable/albert"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="@+id/garis2" />
      </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
      android:id="@+id/main_cardview3"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:cardCornerRadius="20dp"
      app:cardMaxElevation="1dp"
      app:cardPreventCornerOverlap="true"
      app:cardUseCompatPadding="true"
      app:contentPadding="10dp">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_white"
        android:padding="10dp">

        <TextView
          android:id="@+id/classmates3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/members_maincard"
          android:textColor="@color/mainGreen"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent" />

        <Button
          android:id="@+id/join_button3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:background="@drawable/round_ex"
          android:backgroundTint="#009688"
          android:paddingStart="30dp"
          android:paddingTop="5dp"
          android:paddingEnd="30dp"
          android:text="@string/join_class_button"
          android:textAllCaps="false"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
          android:id="@+id/garis3"
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:layout_marginTop="10dp"
          android:background="@color/mainBlue"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/instructor3" />

        <TextView
          android:id="@+id/instructor3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:text="@string/lecturer1"
          android:textColor="@color/secondaryFont"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/course3" />

        <TextView
          android:id="@+id/time3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="3dp"
          android:fontFamily="sans-serif-medium"
          android:text="@string/time_maincard"
          android:textColor="@color/ternaryFont"
          android:textSize="13sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/Category3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/round_ex"
          android:fontFamily="sans-serif-medium"
          android:paddingStart="10dp"
          android:paddingTop="5dp"
          android:paddingEnd="10dp"
          android:paddingBottom="5dp"
          android:text="@string/course1"
          android:textAlignment="center"
          android:textColor="@color/white"
          android:textSize="13sp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/course3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:fontFamily="sans-serif-black"
          android:text="@string/activities1"
          android:textColor="@color/mainFont"
          android:textSize="20sp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/Category3" />

        <ImageView
          android:id="@+id/imageView3"
          android:layout_width="match_parent"
          android:layout_height="182dp"
          android:adjustViewBounds="false"
          android:scaleType="centerCrop"
          android:src="@drawable/albert"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="@+id/garis3" />
      </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
      android:id="@+id/main_cardview4"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:cardCornerRadius="20dp"
      app:cardMaxElevation="1dp"
      app:cardPreventCornerOverlap="true"
      app:cardUseCompatPadding="true"
      app:contentPadding="10dp">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_white"
        android:padding="10dp">

        <TextView
          android:id="@+id/classmates4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/members_maincard"
          android:textColor="@color/mainGreen"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent" />

        <Button
          android:id="@+id/join_button4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:background="@drawable/round_ex"
          android:backgroundTint="#009688"
          android:paddingStart="30dp"
          android:paddingTop="5dp"
          android:paddingEnd="30dp"
          android:text="@string/join_class_button"
          android:textAllCaps="false"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <TextView
          android:id="@+id/garis4"
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:layout_marginTop="10dp"
          android:background="@color/mainBlue"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/instructor4" />

        <TextView
          android:id="@+id/instructor4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:text="@string/lecturer1"
          android:textColor="@color/secondaryFont"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/course4" />

        <TextView
          android:id="@+id/time4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="3dp"
          android:fontFamily="sans-serif-medium"
          android:text="@string/time_maincard"
          android:textColor="@color/ternaryFont"
          android:textSize="13sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/Category4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/round_ex"
          android:fontFamily="sans-serif-medium"
          android:paddingStart="10dp"
          android:paddingTop="5dp"
          android:paddingEnd="10dp"
          android:paddingBottom="5dp"
          android:text="@string/course1"
          android:textAlignment="center"
          android:textColor="@color/white"
          android:textSize="13sp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/course4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:fontFamily="sans-serif-black"
          android:text="@string/activities1"
          android:textColor="@color/mainFont"
          android:textSize="20sp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/Category4" />

        <ImageView
          android:id="@+id/imageView4"
          android:layout_width="match_parent"
          android:layout_height="182dp"
          android:adjustViewBounds="false"
          android:scaleType="centerCrop"
          android:src="@drawable/albert"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="@+id/garis4" />
      </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

  </LinearLayout>

</ScrollView>